<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        card_view:cardCornerRadius="@dimen/corner_radius"
        card_view:cardElevation="@dimen/card_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:padding="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="2dp"
                android:text="@string/be_a_seller"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginRight="4dp"
                    android:text="@string/already_account"
                    android:textColor="@color/gray"
                    android:textSize="14sp"
                    />

                <TextView
                    android:id="@+id/link_signin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/signin"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    />
            </LinearLayout>

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/et_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/company"/>

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email_addr"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/et_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/et_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/et_displayname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/display_name"
                android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/et_addr1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/addr_line1"
                android:inputType="textPostalAddress"/>

            <EditText
                android:id="@+id/et_addr2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:hint="@string/addr_line2"
                android:inputType="textPostalAddress"/>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                card_view:cardCornerRadius="@dimen/corner_radius"
                card_view:cardElevation="@dimen/card_elevation">

                <TextView
                    android:id="@+id/btn_register"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:background="@drawable/selector_btn_simple"
                    android:gravity="center"
                    android:paddingBottom="8dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:paddingTop="8dp"
                    android:text="REGISTER"
                    android:textColor="#FFF"
                    android:textStyle="bold"/>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</ScrollView>